[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Nome" type="LineEdit" parent="."]
margin_left = 120.0
margin_top = 94.0
margin_right = 370.0
margin_bottom = 150.0
placeholder_text = "Digite um nome..."

[node name="Numero" type="LineEdit" parent="."]
margin_left = 120.0
margin_top = 166.0
margin_right = 370.0
margin_bottom = 222.0
placeholder_text = "Digite um n√∫mero..."

[node name="Button" type="Button" parent="."]
margin_left = 343.0
margin_top = 248.0
margin_right = 610.0
margin_bottom = 314.0
text = "Coletar dados"

[node name="Button2" type="Button" parent="."]
margin_left = 343.0
margin_top = 341.0
margin_right = 610.0
margin_bottom = 407.0
text = "Incrementar"

[node name="Button3" type="Button" parent="."]
margin_left = 343.0
margin_top = 433.0
margin_right = 610.0
margin_bottom = 499.0
text = "Baldo!"

[node name="LabelNome" type="Label" parent="."]
margin_left = 390.0
margin_top = 99.0
margin_right = 618.0
margin_bottom = 152.0

[node name="LabelNumero" type="Label" parent="."]
margin_left = 390.0
margin_top = 172.0
margin_right = 608.0
margin_bottom = 218.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
